--- a/webview_app/package.json
+++ b/webview_app/package.json
@@ -11,6 +11,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-mounter": "^1.2.0",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "satori-rtm-sdk": "^1.1.1"
   }
 }
