--- a/meteor-react-admin-lte/package.json
+++ b/meteor-react-admin-lte/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "bcrypt": "^1.0.3",
+    "bufferutil": "^3.0.2",
     "classnames": "^2.2.5",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "3.0.3"
+    "react-router": "3.0.3",
+    "satori-rtm-sdk": "^1.1.1",
+    "utf-8-validate": "^3.0.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
